Fix install of doxygen on OSX

--- a/linux/install
+++ b/linux/install
@@ -10,3 +10,17 @@ install_libccd()
   sudo apt-get -qq update
   sudo apt-get -qq --yes --force-yes install libccd-dev
 }
+
+install_doxygen()
+{
+    _cd_src_directory
+    echo "--> Installing Doxygen"
+    wget --quiet -O - "ftp://ftp.stack.nl/pub/users/dimitri/doxygen-1.8.11.linux.bin.tar.gz" | tar -xz;
+    cd "doxygen-1.8.11"
+    ./configure --prefix "$DEVEL_DIR/install"
+    {
+      make $MAKE_ARGS install > ${MAKE_OUTPUTFILE}
+    } || {
+      :
+    }
+}
