--- a/install
+++ b/install
@@ -11,8 +11,4 @@ rm -rf "$SOURCE_DIR" "$INSTALL_DIR"
 mkdir -p "$SOURCE_DIR"
 mkdir -p "$INSTALL_DIR"
 
-# Setup environment variables.
-export LD_LIBRARY_PATH="$INSTALL_DIR/lib:$LD_LIBRARY_PATH"
-export LD_LIBRARY_PATH="$INSTALL_DIR/lib/`dpkg-architecture -qDEB_BUILD_MULTIARCH`:$LD_LIBRARY_PATH"
-export PKG_CONFIG_PATH="$INSTALL_DIR/lib/pkgconfig:$PKG_CONFIG_PATH"
-export PKG_CONFIG_PATH="$INSTALL_DIR/lib/`dpkg-architecture -qDEB_BUILD_MULTIARCH`/pkgconfig:$PKG_CONFIG_PATH"
+. ${TRAVIS_SUBMODULE}/common/config.sh
